--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "@so-xzen/eventOfParis",
+  "name": "@so-xzen/my-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production",
-    "fix": "webpack-dev-server --mode development --open --fix"
+    "start": "webpack-dev-server --mode development --open --port 8080",
+    "build": "webpack --mode production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xzen/my-react.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xzen/my-react/issues"
+  },
+  "homepage": "https://github.com/xzen/my-react#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -33,12 +40,13 @@
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.5.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
